--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <main>
         <header>
-            <H1>Título do Site</H1>
+            <H1>Cursos Grátis</H1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
+            <h2>Curso de HTML com CSS3</h2>
         </article>
         <article>
-            <p>Texto Artigo 002</p>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro laborum, maiores eum quae vel cum mollitia esse illum eius illo hic doloremque explicabo, reiciendis cupiditate officia ullam aut iusto expedita!</p>
         </article>
     </main>
 </body>
